--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,10 @@
         android:theme="@style/Theme.Lab2"
         tools:targetApi="31">
         <activity
-            android:name=".Computadora"
+            android:name=".CrearComputadoraActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ComputadoraActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
