--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.Lab2"
         tools:targetApi="31">
         <activity
+            android:name=".ActualizarMonitor"
+            android:exported="false" />
+        <activity
+            android:name=".ActulizarMonitor"
+            android:exported="false" />
+        <activity
+            android:name=".AddMonitor"
+            android:exported="false" />
+        <activity
             android:name=".Teclado"
             android:exported="false" />
         <activity
