--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.Lab2"
         tools:targetApi="31">
         <activity
+            android:name=".ActualizarComputadoraAtivity"
+            android:exported="false" />
+        <activity
+            android:name=".ComputadoraActivity"
+            android:exported="false" />
+        <activity
             android:name=".Teclado"
             android:exported="false" />
         <activity
