--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Lab2"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        >
+
         <activity
             android:name=".ActualizarComputadoraAtivity"
             android:exported="false" />
@@ -24,16 +26,23 @@
             android:exported="false" />
         <activity
             android:name=".ListaMonitor"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Monitor"
+
+            />
         <activity
             android:name=".ActualizarMonitor"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Actualizar"
+            />
         <activity
             android:name=".ActulizarMonitor"
             android:exported="false" />
         <activity
             android:name=".AddMonitor"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Nuevo"
+            />
         <activity
             android:name=".Teclado"
             android:exported="false" />
