--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Lab2"
         tools:targetApi="31">
         <activity
+            android:name=".TecladoNuevo"
+            android:exported="false" />
+        <activity
             android:name=".ActualizarComputadoraAtivity"
             android:exported="false" />
         <activity
@@ -36,7 +39,8 @@
             android:exported="false" />
         <activity
             android:name=".Teclado"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />
         <activity
             android:name=".Computadora"
             android:exported="false" />
